RESOLVED FIXED233107
[GraphicsLayerWC] Incorrect compositing debug border color
https://bugs.webkit.org/show_bug.cgi?id=233107
Summary [GraphicsLayerWC] Incorrect compositing debug border color
Fujii Hironori
Reported 2021-11-14 13:17:20 PST
[GraphicsLayerWC] Incorrect compositing debug border color 1. Start WinCairo MiniBrowser 2. Menu → Debug → Show Compositing Borders 3. Go to https://webkit.org/blog-files/3d-transforms/perspective-by-example.html 4. The compositing debug border color should be green (drawsContent layer), but yellow (other layer)
Attachments
Patch (2.44 KB, patch)
2021-11-14 13:24 PST, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2021-11-14 13:24:03 PST
Fujii Hironori
Comment 2 2021-11-14 20:22:49 PST
Comment on attachment 444193 [details] Patch Clearing flags on attachment: 444193 Committed r285798 (244242@main): <https://commits.webkit.org/244242@main>
Fujii Hironori
Comment 3 2021-11-14 20:22:52 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2021-11-14 20:23:23 PST
Note You need to log in before you can comment on or make changes to this bug.