[GraphicsLayerWC] Incorrect compositing debug border color https://bugs.webkit.org/show_bug.cgi?id=233107

Reviewed by Don Olmstead.

GraphicsLayer::updateDebugIndicators() should be called after
changing some layer properties.

* WebProcess/WebPage/wc/GraphicsLayerWC.cpp:
(WebKit::GraphicsLayerWC::setMasksToBounds):
(WebKit::GraphicsLayerWC::setDrawsContent):
(WebKit::GraphicsLayerWC::setContentsToPlatformLayer):
(WebKit::GraphicsLayerWC::setBackdropFilters):
Call updateDebugIndicators.


Canonical link: https://commits.webkit.org/244242@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285798 268f45cc-cd09-0410-ab3c-d52691b4dbfc